syntax = "proto3";

option csharp_namespace = "PrivateChannel.Front";

package privatechannel;

service PrivateNoteSvc {

  rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse);

  rpc ReadNote (ReadNoteRequest) returns (ReadNoteResponse);

}

message CreateNoteRequest {
  bytes cipherText = 1;
  bytes authTag = 2;
  bytes iV = 3;
  bytes salt = 4;
  int32 minutesAvailable = 5;
  int32 maxUnlockAttempts = 6;
}

message CreateNoteResponse {
  bytes id = 1;
}

message ReadNoteRequest {
  bytes id = 1;
  string password = 2;
}

message ReadNoteResponse {
  string message = 1;
}